
Tickets:
	- Fixed #397: Defect - squirrelmail - Fatal error: Cannot redeclare hex2bin()
	- Fixed #396: Defect - File Manager (ajaxplorer) no compatible with php5.4
	- Fixed #402: Task - Ajaxplorer - Integrate fix from ajaxplorer forum
	- Fixed #403: Defect - Hosting Plan Secure Code doesn't work
	- Fixed #404: Defect - Missing translations

-------------------------------------------------------------------------------------
i-MSCP 1.0.3.0
-------------------------------------------------------------------------------------
2012-03-23: Torsten Widmann
	- RELEASE i-MSCP 1.0.3.0 (Stable)

Tickets:
	- Fixed #388: Cosmetics - Typo Error
	- Fixed #389: Defect - Plugins installed by admin are removed during update
	- Fixed #391: Bug - HELO-Mismatch (policyd-weight)
	- Fixed #393: Defect - Apache cannot restart after a libapach2-mod* update
	- Fixed #394: Defect - Wrong permissions for /etc/policyd-weight.conf

-------------------------------------------------------------------------------------
i-MSCP 1.0.2.2 (RC3)
-------------------------------------------------------------------------------------
2012-03-16: Torsten Widmann
	- RELEASE i-MSCP 1.0.2.2 (RC3)

Distributions:
	Ubuntu:
		- Added support for Oneiric Ocelot

Features / Enhancements:

	GUI:
		Tools:
			- Replaced net2ftp by ajaxplorer

Tickets:
	- Fixed #296: Defect - Some issues with dovecot migration script
	- Fixed #366: Enhancement - Move menu label show/disable option at user profile level
	- Fixed #370: Enhancement - Admin/Reseller must be able to edit "Open_Base_Dir" for a domain
	- Fixed #372: Cosmetic - Change colour of enable/disabled Features in PHP Editor
	- Fixed #375: Defect - GUI should allow shared mount points
	- Fixed #377: Defect - Some issues with shared mount point
	- Fixed #380: Bug - Order Panel - An exception have been thrown Hosting
	- Fixed #381: Defect - Wrong query in setup_imscp_database - Drop user - Condition