@@ -243,11 +243,17 @@ $config->PLUGIN = array();
 // Paths appended to the default PHP open_basedir directive of customers
 $config->PHPINI_OPEN_BASEDIR = '';
 
+// Please: Don't move this statement before the initialization process
+//if(PHP_SAPI != 'cli') {
+//    $config->MAINTENANCEMODE_MESSAGE =
+//        tr("We are sorry, but the system is currently under maintenance.\nPlease try again later.");
+//}
+
 // Initialize the application
 iMSCP_Initializer::run($config);
 
 // Please: Don't move this statement before the initialization process
-if(PHP_SAPI != 'cli') {
+if(PHP_SAPI != 'cli' && !isset(iMSCP_Registry::get('dbConfig')->MAINTENANCEMODE_MESSAGE)) {
     $config->MAINTENANCEMODE_MESSAGE =
         tr("We are sorry, but the system is currently under maintenance.\nPlease try again later.");
 }
